# Stardust-Celeste

./: .gitignore  .gitmodules  APILayout.md  CMakeLists.txt  README.md  Tools3DS.cmake  setup_vita.cmake  test_runner_psp.sh
.github/workflows/: cmake.yml  stardust.yml
Stardust-Celeste/: CMakeLists.txt
Stardust-Celeste/include/: scpch.hpp
Stardust-Celeste/include/Utilities/: NonMove.hpp  Singleton.hpp
Test/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  example.cpp
ext/: config.h  stb_image.hpp  stb_vorbis.c  stb_vorbis.h
include/: Platform.hpp  Stardust-Celeste.hpp  scpch.hpp
include/Audio/: AudioContext.hpp  AudioListener.hpp  Clip.hpp  dr_wav.h
include/Core/: Application.hpp  Core.hpp  PlatformLayer.hpp  State.hpp
include/Events/: Dispatcher.hpp  Event.hpp
include/Graphics/: Graphics.hpp
include/Graphics/2D/: AnimatedSprite.hpp  AnimatedTilemap.hpp  FixedAnimatedTilemap.hpp  FixedFontRenderer.hpp  FixedTilemap.hpp  FontRenderer.hpp  Sprite.hpp  Tilemap.hpp
include/KHR/: khrplatform.hpp
include/Lua/: LuaContext.hpp  LuaScript.hpp
include/Math/: Math.hpp  MathUtils.hpp  Matrix.hpp  Vector.hpp
include/Network/: Network.hpp  NetworkDriver.hpp  Packet.hpp  Socket.hpp
include/Platform/: Platform.hpp
include/Rendering/: Camera.hpp  GI.hpp  Mesh.hpp  RenderContext.hpp  RenderTypes.hpp  Rendering.hpp  ShaderManager.hpp  Texture.hpp
include/Rendering/GI/: BufferObject.hpp  TextureHandle.hpp
include/Rendering/GI/DX11/: DXContext.hpp
include/Rendering/GI/GL/: GLBufferObject.hpp  GLTextureHandle.hpp
include/Rendering/GI/VK/: VkBufferObject.hpp  VkContext.hpp  VkPipeline.hpp  VkTextureHandle.hpp  VkThreadPool.hpp  VkUtil.hpp
include/Rendering/Primitive/: Rectangle.hpp
include/Utilities/: Assertion.hpp  Controller.hpp  Input.hpp  Logger.hpp  NonCopy.hpp  NonMove.hpp  Profiler.hpp  Singleton.hpp  ThreadSafe.hpp  Timer.hpp  Types.hpp  Utilities.hpp
include/Utilities/Controllers/: ControllerCollection.hpp  KeyboardController.hpp  MouseController.hpp  N3DSController.hpp  PSPController.hpp  VitaController.hpp
include/fmt/: core.h  format-inl.h  format.h
include/glad/: glad.h  glad.hpp
interpreter/: interpreter.cpp
licenses/: LICENSE.GLAD  LICENSE.GLM
src/: glad.c  glad.cpp  stardust.cpp  stbi.cpp
src/Audio/: AudioContext.cpp  AudioListener.cpp  Clip.cpp
src/Core/: Core.cpp  Entry.cpp  PlatformLayer.cpp
src/Graphics/2D/: AnimatedSprite.cpp  AnimatedTilemap.cpp  FixedAnimatedTilemap.cpp  FixedFontRenderer.cpp  FixedTilemap.cpp  FontRenderer.cpp  Sprite.cpp  Tilemap.cpp
src/Lua/: LuaContext.cpp  LuaScript.cpp
src/Math/: Matrix.cpp  Vector.cpp
src/Network/: ClientSocket.cpp  Connection.cpp  NetworkDriver.cpp  Packet.cpp  ServerSocket.cpp  Socket.cpp
src/Rendering/: Camera.cpp  GI.cpp  Mesh.cpp  RenderContext.cpp  ShaderManager.cpp  Texture.cpp
src/Rendering/GI/: DefaultImpl.cpp  OGLImpl.cpp  VKImpl.cpp
src/Rendering/GI/DX11/: DXContext.cpp
src/Rendering/GI/GL/: GLBufferObject.cpp  GLTextureHandle.cpp
src/Rendering/GI/VK/: VkBufferObject.cpp  VkBufferObject.hpp  VkContext.cpp  VkContext.hpp  VkPipeline.cpp  VkPipeline.hpp  VkTextureHandle.cpp  VkTextureHandle.hpp  VkThreadPool.cpp  VkUtil.hpp
src/Rendering/Primitive/: Rectangle.cpp
src/Utilities/: Input.cpp  Logger.cpp  Timer.cpp
src/Utilities/Controllers/: KeyboardController.cpp  MouseController.cpp  N3DSController.cpp  PSPController.cpp  VitaController.cpp
src/fmt/: format.cpp
tests/: CMakeLists.txt  test_assert.cpp  test_basic.cpp  test_fmt.cpp  test_log.cpp  test_profiler.cpp  test_ref_ptr.cpp  test_scope_ptr.cpp  test_threadsafe_simple.cpp  test_timer.cpp  tester_assert.hpp
